# selection-capture

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  LICENSE  Makefile  QUICKSTART_PUBLISH.md  README.md  RELEASE_GUIDE.md  RELEASE_SUCCESS.md  SECURITY.md  SPEC.md  llms.txt  rustfmt.toml
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
benches/: capture_latency.rs
docs/: README.md
docs/contributing/: CODE_OF_CONDUCT.md
docs/guides/: PROJECT_SETUP_SUMMARY.md
docs/plans/: 2026-03-29-phase-3-3-rich-content-spec.md  2026-03-29-roadmap-2026-2027.md
docs/reference/: CITATION.cff
docs/release/: README_RELEASE.md  RELEASES.md  cliff.toml  release.toml
docs/technical/: COMPETITIVE_ANALYSIS.md  CROSS_PLATFORM_TESTING.md  DEVELOPMENT.md  LINUX.md  MONITORING.md  PERFORMANCE_BASELINE.md  ROADMAP_2026_2027.md  TEST_MATRIX.md  WINDOWS.md
scripts/: check_agent_docs_sync.py  check_bench_regression.py  generate_agent_docs.py  install-tools.sh  release.sh  setup-release.sh
src/: async_api.rs  ax_observer.rs  cache.rs  engine.rs  engine_tests.rs  lib.rs  linux.rs  linux_observer.rs  linux_runtime_adapter.rs  linux_shell.rs  linux_subscriber.rs  linux_tests.rs  macos.rs  macos_ax.rs  macos_tests.rs  monitor.rs  native_subscriber.rs  observer_bridge.rs  platform.rs  profile.rs  rich_clipboard.rs  rich_convert.rs  rich_engine.rs  rich_engine_tests.rs  rich_types.rs  traits.rs  types.rs  windows.rs  windows_observer.rs  windows_runtime_adapter.rs  windows_subscriber.rs  windows_tests.rs
tests/: async_capture.rs  linux_smoke.rs  monitoring.rs  perf_smoke.rs  shared_engine.rs  windows_smoke.rs
tests/fixtures/rich/: messy-controls-unicode.rtf  messy-field-escaped.rtf  outlook-style-bullets.rtf  word-style-paragraphs.rtf
tests/fixtures/rich/real/: notion-checklist-export.rtf  slack-thread-export.rtf  teams-chat-export.rtf
